@@ -1,5 +1,6 @@
 .title_menu Not implemented yet.
 .title Dashboard
 /
-  Check out HTML source to view the ouput of the hook:
+  Check out HTML source to view the output of the hook if you have sample plugin installed
+  http://github.com/michaeldv/crm_sample_plugin/tree/master
   = hook(:home_view, self, :hello => "world!", :welcome => "home")
